--- a/Notes project/notes.css
+++ b/Notes project/notes.css
@@ -18,14 +18,23 @@ nav {
   nav ul li a {
     color: #fff;
   }
+  body {
+    background-color: antiquewhite;
+  }
+  
   .container {
     display: flex;
     margin-top: 20px;
   }
   
   aside {
-    width: 300px;
+    width: 450px;
     margin-right: 20px;
+  }
+
+  #headding{
+    font-size: 25px;
+    text-decoration: underline;
   }
   
   ul {
@@ -41,6 +50,9 @@ nav {
   ul li a {
     color: #333;
     text-decoration: solid;
+  }
+  li{
+    font-size: 25px;
   }
   
   iframe {
