--- a/Notes project/about.css
+++ b/Notes project/about.css
@@ -7,25 +7,23 @@ body {
   nav {
     background-color: #333;
     color: #fff;
-    padding: 10px;
+    padding: 20px;
+    font-size: 25px;
   }
   
   nav ul {
-    list-style-type: none;
     margin: 0;
     padding: 0;
   }
   
   nav ul li {
     display: inline;
-    margin-right: 10px;
+    margin-right: 15px;
   }
   
   nav ul li a {
     color: #fff;
-    text-decoration: none;
   }
-  
   header {
     text-align: center;
     background-color: #f2f2f2;
