--- a/Notes project/styles.css
+++ b/Notes project/styles.css
@@ -1,12 +1,11 @@
 body {
     font-family: Arial, sans-serif;
-    margin-top: 12%;
   }
   
   .login-container {
     width: 80%;
     max-width: 400px;
-    margin: 0 auto;
+    margin: auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -14,13 +13,15 @@ body {
   
   h1 {
     text-align: center;
+    background-color: #ccc;
+    
   }
   
   input {
     width: 97%;
     padding: 8px;
     margin-bottom: 10px;
-    border: 2px solid #1100ff;
+    border: 2px solid #a8a7b6;
     border-radius: 5px;
   }
   
@@ -30,7 +31,7 @@ body {
     background-color: #4CAF50;
     color: white;
     font-size: larger;
-    border: 2 green;
+    border: 1 rgb(16, 19, 16);
     border-radius: 5px;
     cursor: pointer;
   }
